assets/css/backgrounds.css
/*--------------------------background styles (Add back to style when finished)-------------------------*/

.landing-index {
    height: 50vh;
    background: url('../../assets/images/index-background.jpg') no-repeat bottom right fixed;
}

.landing-music,
.landing-video,
.landing-about {
    height: 300px;
}

.landing-about {
    background: url('../../assets/images/about-background.jpg') no-repeat bottom right fixed;
}

.landing-music {
    background: url('../../assets/images/music-background.jpg') no-repeat bottom right fixed;
}

.landing-video {
    background: url('../../assets/images/video-background.jpg') no-repeat bottom right fixed;
}

.landing-contact {
    background: url('../../assets/images/contact-background.jpg') no-repeat bottom right fixed;
    height: 65vh;
}

.landing-404 {
    background: url('../../assets/images/404-background.gif') no-repeat bottom right fixed;
    height: 100vh;
}

.landing-index,
.landing-music,
.landing-video,
.landing-about,
.landing-contact,
.landing-404 {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    background-position: center;
    z-index: -2;
}

.bg-cover-opaque {
    position: absolute;
    padding: 0;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.4);
    z-index: -1;
}


@media (min-width: 576px) {
    .landing-index {
        height: 60vh;
    }

    .landing-about {
        height: 400px;
    }

    .landing-video {
        height: 400px;
    }

    .landing-music {
        height: 400px;
    }


}

@media(min-width: 768px) {
    .landing-index {
        height: 70vh;
    }

    .landing-about {
        height: 600px;
    }

    .landing-video {
        height: 600px;
    }

    .landing-music {
        height: 600px;
    }


}

